--- a/web/css/style.css
+++ b/web/css/style.css
@@ -43,3 +43,15 @@
     background: white;
     font-size: 14px;
 }
+.field {
+    clear: both;
+    text-align: right;
+    line-height:25px;
+}
+label {
+    float: left;
+    padding-right:10px;
+}
+.main {
+    float:left
+}
